# Fractal-Generator-Analysis

./: LevyCurve.py  LevyCurveTest.ipynb  README.md  pyproject.toml
notebooks/: Levy_Curve_project_I.ipynb
scripts/: cli.py
src/fractals/: __init__.py  ifs.py  levy_c.py  lsystem.py  metrics.py  plotting.py  utils.py  variants.py
