[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fractals"
version = "0.1.0"
description = "Lévy C-curve fractal: L-system + IFS, analysis tools, and CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Jan Gaska, Filip Mozdzonek" }]
dependencies = [
"numpy>=1.26",
"matplotlib>=3.8",
"typer>=0.12.0",
"pandas"
]

[project.optional-dependencies]
notebooks = [
"jupyter>=1.0",
"ipykernel>=6.29",
"ipython>=8.20",
]

dev = [
"ruff>=0.6.9",
"pre-commit>=3.8",
]

[project.scripts]
levy-fractal = "fractals.cli:app"

[tool.ruff]
line-length = 100
# Lint rules
lint.select = ["E", "F", "I", "UP", "B"]
# Ignore noisy rules here if needed (example):
# lint.ignore = ["E203", "E266"]
# Paths
src = ["src"]
exclude = [".venv", ".uv", "build", "dist", "notebooks"]

[tool.ruff.lint.isort]
known-first-party = ["fractals"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false